[package]
name = "reactive-state"
description = "A library for managing global application state (similar to redux)."
version = "0.1.1"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"
exclude = ["build-docs.sh", "screenshots/**"]
readme = "README.md"
repository = "https://github.com/kellpossible/reactive-state"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.17", optional = true }
# TODO: unpin dependency when https://github.com/rustwasm/gloo/issues/120 is resolved
wasm-bindgen = { version = "=0.2.65", optional = true }
web-sys = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
log = { version = "0.4", optional = true }
serde-diff = "0.3.0"

[features]
default = []
web_logger = ["serde", "wasm-bindgen/serde-serialize", "web-sys"]
simple_logger = ["log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]